# refactool

./: .gitignore  Dockerfile  LICENSE  README.md  celeryconfig.py  clone.py  docker-compose.yml  download.py  install_refactool.bat  pip.conf  pyproject.toml  redis-sentinel.conf  refactool  refactool.py  requirements-dev.txt  requirements.txt  scripts.json  setup.py  urls.json
.github/workflows/: ci.yml  publish.yml
analyses/: captool_analysis.txt
api/: Dockerfile  version.py
api/routes/: cache.py
api/src/: __init__.py  logging.py  main.py  monitoring.py  requirements.txt  security.py  tasks.py
api/src/analyzers/: __init__.py  ai_providers.py  code_analyzer.py  github_manager.py
api/src/cache/: __init__.py  cluster.py  lru_cache.py
api/src/config/: celery_config.py
api/src/monitoring/: __init__.py  (+2 more)
cli/: Dockerfile
cli/src/: logger.py  main.py  requirements.txt
dags/: lru_retraining.py
microservices/: celery_app.py
microservices/ai-module/: Dockerfile
microservices/code-analyzer/: Dockerfile
redisbloom/: client.py
scripts/: release.py  start_services.ps1  start_services.sh
src/: ab_routing.py  config.py
src/cache/: cluster.py  lru_predictive.py  lru_tracker.py
tests/: conftest.py  redis.conf  test_auth.py  test_integration.py  test_system.py  test_tasks.py  test_unit.py
tests/cache/: test_advanced_cache.py  test_cache.py  test_lru.py  test_write_through.py
tests/cluster/: test_slots.py
tests/integration/: test_ab_routing.py  test_cache_integration.py  test_code_analysis.py  test_stress.py
tests/sample_project/: dummy_code.py
(+13 files in other folders)
